lilv (0.24.27) unstable; urgency=medium

  * Add header warnings test
  * Avoid over-use of yielding meson options
  * Fix potential memory leak in lilv_world_load_plugin_classes()
  * Fix potential memory leak in lilv_world_set_option()
  * Gracefully ignore and warn about non-directories in LV2_PATH
  * Reduce temporary node allocations during query operations

 -- David Robillard <d@drobilla.net>  Sat, 06 Sep 2025 19:30:32 +0000

lilv (0.24.26) stable; urgency=medium

  * Add lint option with project metadata and code quality tests
  * Avoid use of VLAs in lv2apply
  * Clean up and isolate platform-specific code
  * Fix C++ test build on MacOS
  * Fix library current_version on MacOS
  * Fix test suite when TMPDIR has no trailing slash
  * Fully separate library code from programs
  * Improve const correctness
  * Replace more platform-specific code with use of zix

 -- David Robillard <d@drobilla.net>  Sun, 19 Jan 2025 13:53:31 +0000

lilv (0.24.24) stable; urgency=medium

  * Avoid overriding state features passed by the host
  * Fix null dereference when trying to load state from a missing file
  * Fix potential null dereferences and conversion warnings

 -- David Robillard <d@drobilla.net>  Tue, 23 Jan 2024 19:39:29 +0000

lilv (0.24.22) stable; urgency=medium

  * Allow LILV_API to be defined by the user
  * Clean up code
  * Clean up inconsistent tool command line interfaces
  * Convert man pages to mdoc
  * Fix crash when plugins pass NULL to the LV2_State_Retrieve_Function
  * Fix dependencies in pkg-config file
  * Fix potential crash when writing state files fails
  * Order plugin classes by URI
  * Override pkg-config dependency within meson
  * Remove junk files from documentation install
  * Replace duplicated dox_to_sphinx script with sphinxygen dependency
  * Switch to external zix dependency

 -- David Robillard <d@drobilla.net>  Sun, 22 Oct 2023 20:14:02 +0000

lilv (0.24.20) stable; urgency=medium
